<resources>
    <string name="app_name">ReadWish</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="desc_book_cover">Book Cover</string>
    <string name="tv_book_title">Book Title</string>
    <string name="tv_author_name">Author Name</string>
    <string name="title_summary">Summary</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed ullamcorper mi, tempus mollis magna. Proin ac ultricies odio. Donec dictum nulla gravida nulla cursus sagittis. Nam lacinia ante nisl, non rutrum lectus porttitor eu. Nunc vitae mi mauris. Nam efficitur nisi diam, eleifend luctus massa gravida non. Nam ultrices nisl eget orci vehicula elementum. Integer eu metus nec nisi varius ultricies. Vivamus laoreet nunc nec nisi lobortis varius. Suspendisse non suscipit tellus. Nam non mi orci. In nec malesuada ipsum, bibendum commodo mi. Maecenas vel tincidunt mi. Donec iaculis lacus eu risus maximus pharetra. Sed eleifend tristique pellentesque</string>
    <string name="btn_read_book">Read Book</string>
    <string name="desc_favorite_button">Favorite Button</string>
    <string name="checkbox_favorite">Checkbox Favorite</string>
    <string name="tv_categories">Categories</string>
    <string name="chip_all">All</string>
    <string name="chip_fiction">Fiction</string>
    <string name="chip_scifi"><![CDATA[Science Fiction & Fantasy]]></string>
    <string name="chip_children_s_books">Children’s Books</string>
    <string name="chip_history">History</string>
    <string name="chip_science">Science</string>
    <string name="chip_biography">Biography</string>
    <string name="chip_philosophy">Philosophy</string>
    <string name="tv_top_book">Top Book</string>
    <string name="tv_more">More</string>
    <string name="tv_latest_book">Latest Book</string>
    <string name="tv_oldest_book">Oldest Book</string>
    <string name="hint_search">Search</string>
    <string name="btn_filter_by_author_amp_title"><![CDATA[By Author & Title]]></string>
    <string name="btn_filter_by_topic">By Topic</string>
    <string name="title_settings">Settings</string>
</resources>