<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zulfa.readwish.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_listMoreFragment"
            app:destination="@id/listMoreFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.zulfa.readwish.presentation.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.zulfa.readwish.presentation.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.zulfa.readwish.presentation.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.zulfa.readwish.presentation.detail.DetailFragment"
        android:label="Book Detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_readFragment"
            app:destination="@id/readFragment" />
    </fragment>

    <fragment
        android:id="@+id/listMoreFragment"
        android:name="com.zulfa.readwish.presentation.list.ListMoreFragment"
        android:label="List Book"
        tools:layout="@layout/fragment_list_more">
        <argument
            android:name="topic"
            app:argType="string" />
        <argument
            android:name="sort"
            app:argType="string" />
        <action
            android:id="@+id/action_listMoreFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/readFragment"
        android:name="com.zulfa.readwish.presentation.read.ReadFragment"
        android:label="Read Page"
        tools:layout="@layout/fragment_read">
        <argument
            android:name="sort"
            app:argType="string" />

    </fragment>


</navigation>