<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".presentation.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        android:padding="8dp">

        <TextView
            android:id="@+id/categoriesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_categories"
            android:textColor="?attr/colorPrimary"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <HorizontalScrollView
            android:id="@+id/chipScroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/categoriesTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAll"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_all"
                    android:checked="true"
                    app:chipBackgroundColor="@color/chip_background_color"
                    app:chipStrokeColor="@color/colorOnSurface"
                    android:textColor="?attr/colorOnSecondary"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFiction"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_fiction"
                    app:chipBackgroundColor="@color/chip_background_color"
                    app:chipStrokeColor="@color/colorOnSurface"
                    android:textColor="?attr/colorOnSecondary"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:text="@string/chip_scifi"
                    app:chipBackgroundColor="@color/chip_background_color"
                    android:textColor="?attr/colorOnSecondary"
                    app:chipStrokeColor="@color/colorOnSurface"
                    />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_children_s_books"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    app:chipBackgroundColor="@color/chip_background_color"
                    android:textColor="?attr/colorOnSecondary"
                    app:chipStrokeColor="@color/colorOnSurface"
                    />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_history"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    app:chipBackgroundColor="@color/chip_background_color"
                    android:textColor="?attr/colorOnSecondary"
                    app:chipStrokeColor="@color/colorOnSurface"
                    />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_science"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    app:chipBackgroundColor="@color/chip_background_color"
                    android:textColor="?attr/colorOnSecondary"
                    app:chipStrokeColor="@color/colorOnSurface"
                    />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_biography"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    app:chipBackgroundColor="@color/chip_background_color"
                    android:textColor="?attr/colorOnSecondary"
                    app:chipStrokeColor="@color/colorOnSurface"
                    />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_philosophy"
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    app:chipBackgroundColor="@color/chip_background_color"
                    android:textColor="?attr/colorOnSecondary"
                    app:chipStrokeColor="@color/colorOnSurface"
                    />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/topBookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_top_book"
            android:textColor="?attr/colorPrimary"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@id/chipScroll"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/moreTopBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/tv_more"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="#DD2C00"
            app:drawableEndCompat="@drawable/baseline_arrow_right_alt_20"
            app:layout_constraintBaseline_toBaselineOf="@id/topBookTitle"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/rvTopBooks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBookTitle"
            app:layout_constraintVertical_bias="0.004"
            app:indicatorColor="@color/colorSecondary"
            app:trackColor="@color/colorPrimary"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopBooks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBookTitle"
            tools:listitem="@layout/book_item"
             />

        <TextView
            android:id="@+id/latestBookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_latest_book"
            android:textColor="?attr/colorPrimary"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@id/rvTopBooks"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/moreLatestBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/tv_more"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="#DD2C00"
            app:drawableEndCompat="@drawable/baseline_arrow_right_alt_20"
            app:layout_constraintBaseline_toBaselineOf="@id/latestBookTitle"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/rvLatestBooks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latestBookTitle"
            app:layout_constraintVertical_bias="0.004"
            app:indicatorColor="@color/colorSecondary"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLatestBooks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/latestBookTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/book_item"/>

        <TextView
            android:id="@+id/oldestBookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_oldest_book"
            android:textColor="?attr/colorPrimary"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@id/rvLatestBooks"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/moreOldestBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/tv_more"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="#DD2C00"
            app:drawableEndCompat="@drawable/baseline_arrow_right_alt_20"
            app:layout_constraintBaseline_toBaselineOf="@id/oldestBookTitle"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/rvOldestBooks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/oldestBookTitle"
            app:layout_constraintVertical_bias="0.004"
            app:indicatorColor="@color/colorSecondary"
            app:trackColor="@color/colorPrimary"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOldestBooks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/oldestBookTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            tools:listitem="@layout/book_item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>